objects/Oracle_Project__c.object
<CustomObject>
    <description>Oracle Fusion Projects brought over through the OIC interface</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contractor_Time__c</fullName>
        <description>Jira development time from Oracle Project</description>
        <label>Contractor Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Oracle_Task_ID__c</fullName>
        <description>Default Oracle Task ID</description>
        <inlineHelpText>Default Oracle Task ID</inlineHelpText>
        <label>Default Oracle Task ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Time__c</fullName>
        <description>Jira development time from Oracle Project</description>
        <label>Employee Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <externalId>true</externalId>
        <label>Project Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RollUp_Count_Oracle_Project_Task__c</fullName>
        <description>This field will have RollUp Count Oracle Project Task</description>
        <inlineHelpText>This field will have RollUp Count Oracle Project Task</inlineHelpText>
        <label>RollUp Count Oracle Project Task</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Oracle_Project_Task__c</fullName>
        <description>This field will store roll up count from Oracle Project Task.</description>
        <label>Roll Up Oracle Project Task</label>
        <summaryForeignKey>Oracle_Project_Task__c.Oracle_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Expense_Reports__c</fullName>
        <label>Sum of Expense Reports</label>
        <summarizedField>Oracle_Project_Task__c.Sum_of_Expense_Reports__c</summarizedField>
        <summaryForeignKey>Oracle_Project_Task__c.Oracle_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Supplier_Invoices__c</fullName>
        <label>Sum of Supplier Invoices</label>
        <summarizedField>Oracle_Project_Task__c.Sum_of_Supplier_Invoices__c</summarizedField>
        <summaryForeignKey>Oracle_Project_Task__c.Oracle_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Oracle Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Number__c</columns>
        <columns>Comment__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Oracle Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>